--- a/frontend/non members/contact-support.html
+++ b/frontend/non members/contact-support.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Support</title>
-    <!-- Global CSS if any -->
     <link rel="stylesheet" href="/frontend/css/styles.css" />
     <!-- Merged CSS for header, contact support body, and footer -->
     <style>
@@ -15,8 +14,7 @@
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-
-      /* ========== HEADER (NAVIGATION) ========== */
+      /* ========== HEADER (Unified Dropdown Header) ========== */
       .navbar {
         background-color: #fe1e3c;
         position: fixed;
@@ -30,12 +28,10 @@
         font-weight: 200;
         z-index: 1000;
       }
-      /* Left: Logo */
       .nav-header img {
         height: 50px;
         width: auto;
       }
-      /* Center: Nav Links */
       .nav-links {
         margin: 0 auto;
       }
@@ -49,7 +45,6 @@
         color: #fff;
         font-size: 1rem;
       }
-      /* Right: Sign Up & Icons */
       .usr-panel {
         display: flex;
         align-items: center;
@@ -70,7 +65,7 @@
         background: linear-gradient(to right, #ff4b2b, #ff416c);
         transform: scale(1.05);
       }
-      /* ========== DROPDOWN MENU ========== */
+      /* Dropdown Menu */
       .dropdown {
         position: relative;
       }
@@ -85,7 +80,7 @@
         min-width: 160px;
         border-radius: 8px;
         margin-top: 0.5rem;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         padding: 0.75rem 0;
         transform: translateY(-10px);
         transition: opacity 0.2s ease, transform 0.2s ease;
@@ -110,7 +105,6 @@
         pointer-events: auto;
         transform: translateY(0);
       }
-
       /* ========== CONTACT SUPPORT SECTION ========== */
       .contact-main {
         margin-top: 80px; /* offset for fixed header */
@@ -126,7 +120,7 @@
         background: white;
         padding: 3rem;
         border-radius: 15px;
-        box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 6px 15px rgba(0,0,0,0.15);
         text-align: center;
         border-top: 6px solid #d0021b;
       }
@@ -146,7 +140,7 @@
         background: white;
         padding: 1rem;
         border-radius: 10px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
+        box-shadow: 0px 4px 10px rgba(0,0,0,0.12);
         border-left: 6px solid #d0021b;
         margin-bottom: 1.5rem;
         position: relative;
@@ -179,7 +173,7 @@
       .form-group select:focus,
       .form-group textarea:focus {
         background: white;
-        box-shadow: 0px 4px 10px rgba(208, 2, 27, 0.2);
+        box-shadow: 0px 4px 10px rgba(208,2,27,0.2);
       }
       .submit-container {
         text-align: center;
@@ -199,7 +193,7 @@
       .submit-container button:hover {
         background: #a00015;
         transform: translateY(-3px);
-        box-shadow: 0px 6px 12px rgba(208, 2, 27, 0.3);
+        box-shadow: 0px 6px 12px rgba(208,2,27,0.3);
       }
       .support-info {
         margin-top: 2rem;
@@ -214,7 +208,6 @@
       .support-info a:hover {
         text-decoration: underline;
       }
-
       /* ========== FOOTER ========== */
       footer {
         background-color: #0f0f0f;
@@ -259,19 +252,18 @@
       .f-acc a,
       .f-support a {
         text-decoration: none;
-        color: rgb(200, 200, 200);
+        color: rgb(200,200,200);
       }
       .f-logo img {
         width: 150px;
         height: auto;
       }
-
       /* ========== RESPONSIVE ========== */
       @media (max-width: 1024px) {
         .nav-links ul {
           gap: 1rem;
         }
-        .membership-main {
+        .contact-main {
           margin-top: 80px;
           padding: 2rem;
         }
@@ -286,72 +278,62 @@
     </style>
   </head>
   <body>
-    <!-- ========== HEADER (WITH HOVER DROPDOWN) ========== -->
+    <!-- HEADER -->
     <nav class="navbar">
-      <!-- Left: Logo -->
       <div class="nav-header">
-        <img
-          src="/frontend/images/TC_Logos-01.png"
-          alt="Together Culture Cambridge Logo"
-        />
+        <img src="/frontend/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
-      <!-- Center: Nav Links with Dropdown -->
       <div class="nav-links">
         <ul>
-          <li><a href="#">About</a></li>
+          <li><a href="/frontend/index.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
+              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/non-member-page.html">See All Memberships</a></li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="/frontend/non members/events.html">Events</a></li>
+          <li><a href="/frontend/non members/contact-support.html">Contact</a></li>
         </ul>
       </div>
-      <!-- Right: Sign Up & Icons -->
       <div class="usr-panel">
-        <button class="signup-btn">Sign Up</button>
-        <img src="/frontend/images/EmptyBag.svg" alt="Shopping Bag Icon" />
-        <img src="/frontend/images/GuestIcon.svg" alt="Guest Profile Icon" />
+        <button class="signup-btn" onclick="location.href='/frontend/non members/member-application.html'">Join Now</button>
+        <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
+        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
       </div>
     </nav>
 
-    <!-- ========== MAIN CONTENT: CONTACT SUPPORT ========== -->
+    <!-- MAIN CONTENT: CONTACT SUPPORT -->
     <main class="contact-main">
       <div class="contact-container">
         <h1>Contact Support</h1>
-        <p>
-          If you're experiencing an issue, let us know and we'll assist you as
-          soon as possible.
-        </p>
-        <form>
+        <p>If you're experiencing an issue, let us know and we'll assist you as soon as possible.</p>
+        <form id="contactForm">
           <div class="form-group">
             <label>Full Name</label>
-            <input type="text" placeholder="Enter your full name" />
+            <input type="text" placeholder="Enter your full name" required />
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="email" placeholder="Enter your email" />
+            <input type="email" placeholder="Enter your email" required />
           </div>
           <div class="form-group">
             <label>Issue Type</label>
-            <select>
+            <select required>
               <option value="">Select an issue...</option>
               <option value="billing">Billing Issue</option>
               <option value="membership">Membership Problem</option>
               <option value="technical">Technical Issue</option>
-              <option value="Free Membership">Request free memebership</option>
+              <option value="free_membership">Request Free Membership</option>
               <option value="other">Other</option>
             </select>
           </div>
           <div class="form-group">
             <label>Describe Your Issue</label>
-            <textarea
-              placeholder="Provide details about your issue..."
-            ></textarea>
+            <textarea placeholder="Provide details about your issue..." required></textarea>
           </div>
           <div class="submit-container">
             <button type="submit">Submit Request</button>
@@ -360,15 +342,13 @@
         <div class="support-info">
           <p>
             <strong>Need immediate help?</strong> Contact us via email at
-            <a href="mailto:support@togetherculture.com"
-              >support@togetherculture.com</a
-            >
+            <a href="mailto:support@togetherculture.com">support@togetherculture.com</a>
           </p>
         </div>
       </div>
     </main>
 
-    <!-- ========== FOOTER ========== -->
+    <!-- FOOTER -->
     <footer>
       <div class="f-format">
         <div class="f-list">
@@ -376,43 +356,49 @@
             <h4>Navigation</h4>
             <ul>
               <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Memberships</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/frontend/non members/about.html">About</a></li>
+              <li><a href="/frontend/non members/memberships.html">Memberships</a></li>
+              <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="f-mem">
             <h4>Memberships</h4>
             <ul>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
+              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
             </ul>
           </div>
           <div class="f-acc">
             <h4>Account</h4>
             <ul>
-              <li><a href="#">Login / Sign-up</a></li>
-              <li><a href="#">Account Dashboard</a></li>
-              <li><a href="#">My Membership</a></li>
-              <li><a href="#">Billing</a></li>
+              <li><a href="/frontend/non members/login.html">Login / Sign-up</a></li>
+              <li><a href="/frontend/non members/dashboard.html">Account Dashboard</a></li>
+              <li><a href="/frontend/non members/my-membership.html">My Membership</a></li>
+              <li><a href="/frontend/non members/billing.html">Billing</a></li>
             </ul>
           </div>
           <div class="f-support">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Report Issue</a></li>
+              <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
+              <li><a href="/frontend/non members/report-issue.html">Report Issue</a></li>
             </ul>
           </div>
           <div class="f-logo">
-            <img
-              src="/frontend/images/PLACEHOLDER.svg"
-              alt="Placeholder Logo"
-            />
+            <img src="/frontend/images/PLACEHOLDER.svg" alt="Placeholder Logo" />
           </div>
         </div>
       </div>
     </footer>
+
+    <!-- JavaScript for form submission handling -->
+    <script>
+      document.getElementById("contactForm").addEventListener("submit", function(event) {
+        event.preventDefault();
+        alert("Your support request has been submitted!");
+        window.location.href = "/frontend/index.html"; // Change this URL as needed
+      });
+    </script>
   </body>
 </html>
