--- a/frontend/non members/creative-workspace-membership.html
+++ b/frontend/non members/creative-workspace-membership.html
@@ -2,11 +2,9 @@
 <html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Creative Workspace Membership</title>
-    <!-- Global CSS -->
     <link rel="stylesheet" href="/frontend/css/styles.css" />
-    <!-- Merged CSS for this page -->
     <style>
       /* ========== RESET & GLOBAL ========== */
       * {
@@ -15,8 +13,7 @@
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-
-      /* ========== NAVIGATION BAR ========== */
+      /* ========== HEADER (Unified Dropdown Header) ========== */
       .navbar {
         background-color: #fe1e3c;
         position: fixed;
@@ -30,16 +27,12 @@
         font-weight: 200;
         z-index: 1000;
       }
-
-      /* LEFT: LOGO */
       .nav-header img {
         height: 50px;
         width: auto;
       }
-
-      /* CENTER: NAV LINKS */
       .nav-links {
-        margin: 0 auto; /* centers the nav list */
+        margin: 0 auto;
       }
       .nav-links ul {
         list-style: none;
@@ -51,8 +44,6 @@
         color: #fff;
         font-size: 1rem;
       }
-
-      /* RIGHT: SIGN UP + ICONS */
       .usr-panel {
         display: flex;
         align-items: center;
@@ -73,8 +64,7 @@
         background: linear-gradient(to right, #ff4b2b, #ff416c);
         transform: scale(1.05);
       }
-
-      /* ========== DROPDOWN MENU ========== */
+      /* Dropdown Menu */
       .dropdown {
         position: relative;
       }
@@ -114,17 +104,15 @@
         pointer-events: auto;
         transform: translateY(0);
       }
-
       /* ========== MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP ========== */
       .membership-main {
-        margin-top: 80px; /* offset for fixed navbar */
+        margin-top: 80px;
         padding: 2rem;
         background: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
       }
-
       .membership-layout {
         display: flex;
         justify-content: space-between;
@@ -133,7 +121,6 @@
         width: 100%;
         gap: 2rem;
       }
-
       /* LEFT: Info (Title & Subtitle) */
       .membership-info {
         flex: 1;
@@ -157,8 +144,7 @@
         text-transform: uppercase;
         line-height: 1.2;
       }
-
-      /* CENTER: RED CARD */
+      /* CENTER: Red Card */
       .membership-card {
         background-color: #d0021b;
         color: #fff;
@@ -194,7 +180,6 @@
         font-weight: bold;
         transform: translateX(-20px);
       }
-
       /* RIGHT: COST & CTA */
       .membership-pricing {
         flex: 1;
@@ -231,7 +216,6 @@
       .cta-button:hover {
         background-color: #555;
       }
-
       /* ========== FOOTER ========== */
       footer {
         background-color: #0f0f0f;
@@ -282,7 +266,6 @@
         width: 150px;
         height: auto;
       }
-
       /* ========== RESPONSIVE ========== */
       @media (max-width: 1024px) {
         .membership-layout {
@@ -301,55 +284,55 @@
     </style>
   </head>
   <body>
-    <!-- ========== HEADER (NEW DROPDOWN) ========== -->
+    <!-- HEADER -->
     <nav class="navbar">
-      <!-- Left: Logo -->
       <div class="nav-header">
         <img
           src="/frontend/images/TC_Logos-01.png"
           alt="Together Culture Cambridge Logo"
         />
       </div>
-      <!-- Center: Nav Links with Dropdown -->
       <div class="nav-links">
         <ul>
-          <li><a href="#">About</a></li>
+          <!-- Replaced "Home" with "About" -->
+          <li><a href="/frontend/non members/about.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
+              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="/frontend/non members/events.html">Events</a></li>
+          <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
         </ul>
       </div>
-      <!-- Right: Sign Up & Icons -->
       <div class="usr-panel">
-        <button class="signup-btn">Sign Up</button>
+        <button
+          class="signup-btn"
+          onclick="location.href='/frontend/non members/member-application.html'"
+        >
+          Join Now
+        </button>
         <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
         <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
       </div>
     </nav>
 
-    <!-- ========== MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP ========== -->
+    <!-- MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP -->
     <main class="membership-main">
       <section class="membership-section">
         <div class="membership-layout">
-          <!-- Left: Info -->
+          <!-- LEFT: Info -->
           <div class="membership-info">
             <h1>
               <span class="red-text">Creative Workspace</span>
               <span class="black-text">Membership</span>
             </h1>
-            <p class="subtitle">
-              TOGETHER CULTURE<br />
-              CAMBRIDGE
-            </p>
+            <p class="subtitle">Together Culture<br />CAMBRIDGE</p>
           </div>
-          <!-- Center: Red Card -->
+          <!-- CENTER: Red Card -->
           <div class="membership-card">
             <div class="membership-header">
               Apply to Become a Workspace Member
@@ -363,63 +346,82 @@
               </ul>
             </div>
           </div>
-          <!-- Right: Pricing & CTA -->
+          <!-- RIGHT: Pricing & CTA -->
           <div class="membership-pricing">
             <div class="price-card">
               <p class="price-title">Monthly Cost</p>
-              <p class="price-amount">£100 per month<br />+ £100 joining fee</p>
+              <p class="price-amount">
+                £100 per month<br />
+                + £100 joining fee
+              </p>
             </div>
-            <a href="#" class="cta-button">
+            <!-- Updated CTA button to point to membership application -->
+            <a
+              href="/frontend/non members/member application.html"
+              class="cta-button"
+            >
               Become a Creative Workspace Member
             </a>
           </div>
         </div>
-        <!-- Extra note about applying -->
-        <div class="apply-note">
-          <p>
-            In order to apply to become a workspace member, we will need you to
-            fill out a form to check eligibility. We will get back to you within
-            5 working days.
-          </p>
-        </div>
       </section>
     </main>
 
-    <!-- ========== FOOTER ========== -->
+    <!-- FOOTER -->
     <footer>
       <div class="f-format">
         <div class="f-list">
           <div class="f-nav">
             <h4>Navigation</h4>
             <ul>
-              <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Community Membership</a></li>
-              <li><a href="#">Contact</a></li>
+              <!-- Replaced "Home" with "About" in the footer -->
+              <li><a href="/frontend/non members/about.html">About</a></li>
+              <li><a href="/frontend/non members/community-membership.html"
+                >Community Membership</a
+              ></li>
+              <li><a href="/frontend/non members/contact-support.html"
+                >Contact</a></li>
             </ul>
           </div>
           <div class="f-mem">
             <h4>Memberships</h4>
             <ul>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html"
+                >Community</a
+              ></li>
+              <li><a href="/frontend/non members/key-access-membership.html"
+                >Key Access</a
+              ></li>
+              <li><a
+                href="/frontend/non members/creative-workspace-membership.html"
+                >Creative Workspace</a
+              ></li>
             </ul>
           </div>
           <div class="f-acc">
             <h4>Account</h4>
             <ul>
-              <li><a href="#">Login / Sign-up</a></li>
-              <li><a href="#">Account Dashboard</a></li>
-              <li><a href="#">My Membership</a></li>
-              <li><a href="#">Billing</a></li>
+              <li><a href="/frontend/non members/login.html">Login / Sign-up</a></li>
+              <li><a href="/frontend/non members/dashboard.html"
+                >Account Dashboard</a
+              ></li>
+              <li><a href="/frontend/non members/my-membership.html"
+                >My Membership</a
+              ></li>
+              <li><a href="/frontend/non members/billing.html">Billing</a></li>
             </ul>
           </div>
           <div class="f-support">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Report Issue</a></li>
+              <li>
+                <a href="/frontend/non members/contact-support.html"
+                  >Contact Us</a
+                >
+              </li>
+              <li><a href="/frontend/non members/report-issue.html"
+                >Report Issue</a
+              ></li>
             </ul>
           </div>
           <div class="f-logo">
