--- a/frontend/non members/key-access-membership.html
+++ b/frontend/non members/key-access-membership.html
@@ -13,7 +13,6 @@
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-
       /* ========== HEADER (New Dropdown Header) ========== */
       .navbar {
         background-color: #fe1e3c;
@@ -269,7 +268,6 @@
         width: 150px;
         height: auto;
       }
-
       /* ========== RESPONSIVE ========== */
       @media (max-width: 1024px) {
         .membership-layout {
@@ -288,40 +286,43 @@
     </style>
   </head>
   <body>
-    <!-- HEADER: Use Creative Membership Header -->
+    <!-- HEADER -->
     <nav class="navbar">
-      <!-- Left: Logo -->
       <div class="nav-header">
         <img
           src="/frontend/images/TC_Logos-01.png"
           alt="Together Culture Cambridge Logo"
         />
       </div>
-      <!-- Center: Nav Links with Dropdown -->
       <div class="nav-links">
         <ul>
-          <li><a href="#">About</a></li>
+          <!-- Replaced "Home" with "About" -->
+          <li><a href="/frontend/non members/about.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
+              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="/frontend/non members/events.html">Events</a></li>
+          <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
         </ul>
       </div>
-      <!-- Right: Sign Up & Icons -->
       <div class="usr-panel">
-        <button class="signup-btn">Sign Up</button>
+        <button
+          class="signup-btn"
+          onclick="location.href='/frontend/non members/member-application.html'"
+        >
+          Sign Up
+        </button>
         <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
         <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
       </div>
     </nav>
 
-    <!-- MAIN CONTENT: KEY ACCESS MEMBERSHIP BODY -->
+    <!-- MAIN CONTENT: KEY ACCESS MEMBERSHIP -->
     <main class="membership-main">
       <section class="membership-section">
         <div class="membership-layout">
@@ -351,7 +352,13 @@
               <p class="price-title">Monthly Cost</p>
               <p class="price-amount">£75 per month<br />+ £100 joining fee</p>
             </div>
-            <a href="#" class="cta-button"> Join the Key Access Membership </a>
+            <!-- Updated CTA button to point to membership application -->
+            <a
+              href="/frontend/non members/member application.html"
+              class="cta-button"
+            >
+              Join the Key Access Membership
+            </a>
           </div>
         </div>
       </section>
@@ -364,34 +371,54 @@
           <div class="f-nav">
             <h4>Navigation</h4>
             <ul>
-              <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Community Membership</a></li>
-              <li><a href="#">Contact</a></li>
+              <!-- Replaced "Home" with "About" in the footer -->
+              <li><a href="/frontend/non members/about.html">About</a></li>
+              <li><a href="/frontend/non members/community-membership.html"
+                >Community Membership</a
+              ></li>
+              <li><a href="/frontend/non members/contact-support.html"
+                >Contact</a></li>
             </ul>
           </div>
           <div class="f-mem">
             <h4>Memberships</h4>
             <ul>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/community-membership.html"
+                >Community</a
+              ></li>
+              <li><a href="/frontend/non members/key-access-membership.html"
+                >Key Access</a
+              ></li>
+              <li><a
+                href="/frontend/non members/creative-workspace-membership.html"
+                >Creative Workspace</a
+              ></li>
             </ul>
           </div>
           <div class="f-acc">
             <h4>Account</h4>
             <ul>
-              <li><a href="#">Login / Sign-up</a></li>
-              <li><a href="#">Account Dashboard</a></li>
-              <li><a href="#">My Membership</a></li>
-              <li><a href="#">Billing</a></li>
+              <li><a href="/frontend/non members/login.html">Login / Sign-up</a></li>
+              <li><a href="/frontend/non members/dashboard.html"
+                >Account Dashboard</a
+              ></li>
+              <li><a href="/frontend/non members/my-membership.html"
+                >My Membership</a
+              ></li>
+              <li><a href="/frontend/non members/billing.html">Billing</a></li>
             </ul>
           </div>
           <div class="f-support">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Report Issue</a></li>
+              <li>
+                <a href="/frontend/non members/contact-support.html"
+                  >Contact Us</a
+                >
+              </li>
+              <li><a href="/frontend/non members/report-issue.html"
+                >Report Issue</a
+              ></li>
             </ul>
           </div>
           <div class="f-logo">
