--- a/frontend/non members/member application.html
+++ b/frontend/non members/member application.html
@@ -293,7 +293,7 @@
               <li><a href="/frontend/non members/community-membership.html">Community</a></li>
               <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
               <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
-              <li><a href="/frontend/non members/non-member-page.html">See All Memberships</a></li>
+              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
             </ul>
           </li>
           <li><a href="/frontend/non members/events.html">Events</a></li>
