--- a/frontend/non members/events.html
+++ b/frontend/non members/events.html
@@ -288,8 +288,9 @@
               <li><a href="/frontend/non members/community-membership.html">Community</a></li>
               <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
               <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
               <!-- New: "See All Memberships" link -->
-              <li><a href="/frontend/non members/non-member-page.html">See All Memberships</a></li>
+              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
             </ul>
           </li>
           <li><a href="/frontend/non members/events.html">Events</a></li>
