--- a/frontend/non members/non-member-page.html
+++ b/frontend/non members/non-member-page.html
@@ -357,13 +357,14 @@
       <!-- Center: Nav Links -->
       <div class="nav-links">
         <ul>
-          <li><a href="/frontend/index.html">Home</a></li>
+          <li><a href="/frontend/index.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
               <li><a href="/frontend/non members/community-membership.html">Community</a></li>
               <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
               <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
+              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
             </ul>
           </li>
           <li><a href="/frontend/non members/events.html">Events</a></li>
