--- a/frontend/non members/registration.html
+++ b/frontend/non members/registration.html
@@ -36,10 +36,10 @@
 
     .container {
         display: flex;
-        
+       
         justify-content: space-between;
         align-items: flex-start;
-        gap: 50px;
+        gap: 10px;
         margin-top: 30px;
         width: 80%;
     }
@@ -175,8 +175,8 @@
 
 
     <div class="content">
-        <h1>Join Our Community</h1>
-        <p>Become a part of our growing network and enjoy exclusive benefits. Submit an application below to get started!</p>
+        <h1>Welcome Back!</h1>
+        <p>fwagebwrbea</p>
     </div>
 
 <div class = "container">
@@ -249,7 +249,7 @@
                 <ul>
                     <li><a href="/frontend/index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Memberships</a></li>
+                    <li><a href="community-membership.html">Memberships</a></li>
                     <li><a href="/contact-support.html">Contact</a></li>
                 </ul>
             </div>
