--- a/frontend/non members/member application.html
+++ b/frontend/non members/member application.html
@@ -301,9 +301,13 @@
         </ul>
       </div>
       <div class="usr-panel">
-        <button class="signup-btn" onclick="location.href='/frontend/non members/member-application.html'">Sign Up</button>
+        <!-- The "Join Now" button links to registration.html with tab=signup -->
+        <button class="signup-btn" onclick="location.href='/frontend/non members/registration.html?tab=signup'">Join Now</button>
         <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <!-- The user icon links to registration.html with tab=login -->
+        <a href="/frontend/non members/registration.html?tab=login">
+          <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        </a>
       </div>
     </nav>
 
@@ -366,22 +370,19 @@
       </div>
     </main>
 
-    <!-- FOOTER -->
-    <footer>
-      <div class="f-format">
-        <div class="f-list">
-          <div class="f-nav">
-            <h4>Navigation</h4>
-            <ul>
-              <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="/frontend/non members/community-membership.html">Community Membership</a></li>
-              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
-              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
-            </ul>
-          </div>
-        </div>
+
+   <!-- ========== FOOTER ========== -->
+   <footer>
+    <div class="f-format">
+      <div class="authors">
+        <h4>Authors:</h4>
+        <p>Tai Rose (SID: 2108618)</p>
+        <p>Malcom Going (SID: 2372291)</p>
+        <p>Alessandro La Mendola (SID: 2158059)</p>
+        <p>Yusuf Kose (SID: 2415327)</p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
     <!-- JavaScript for submission handling -->
     <script>
